--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "lotto-app",
+  "version": "1.0.0",
+  "main": "server5.js",
+  "scripts": {
+    "start": "node server5.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
