--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,8 @@
     "routes": [
       { "src": "/", "dest": "/index.html" },
       { "src": "/check", "dest": "/server5.js" }
-    ]
-  }
-  
+    ],
+    "files": [
+    "lotto.xlsx"
+  ]
+}
